--- a/src/pages/ViewReceivedApplication/ViewReceivedApplication.css
+++ b/src/pages/ViewReceivedApplication/ViewReceivedApplication.css
@@ -2,6 +2,7 @@
     display: flex;
     padding: 4px 10px 6px 10px;
     align-items: center;
+    flex-shrink: 0;
 
     border-radius: 6px;
     border: 1px solid var(--Warning-200, #FFDC67);
